--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
 	<name>Simple Java pain.001.001.03 document creation</name>
 	<version>0.0.1</version>
 	<packaging>jar</packaging>
+	<inceptionYear>2012</inceptionYear>
+	<licenses>
+		<license>
+			<name>The MIT License</name>
+			<url>http://www.opensource.org/licenses/mit-license.php</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
 	<build>
 		<plugins>
@@ -33,10 +41,35 @@
 					</archive>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.jvnet.jaxb2.maven2</groupId>
+				<artifactId>maven-jaxb2-plugin</artifactId>
+				<version>0.7.3</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<verbose>true</verbose>
+					<schemaIncludes>
+						<include>pain.001.001.03.xsd</include>
+					</schemaIncludes>
+					<generatePackage>nl.irp.sepa.pain.model</generatePackage>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
 	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+		</dependency>
+
 		<!-- Joda Time - Java date and time API -->
 		<dependency>
 			<groupId>joda-time</groupId>
