--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,14 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>xmlunit</groupId>
+			<artifactId>xmlunit</artifactId>
+			<version>1.3</version>
+			<type>jar</type>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- Joda Time - Java date and time API -->
