--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>nl.irp.sepa.pain</groupId>
-	<artifactId>pain</artifactId>
-	<name>Simple Java pain.001.001.03 document creation</name>
+	<groupId>nl.irp.sepa</groupId>
+	<artifactId>sepa-iso20022</artifactId>
+	<name>Dutch SEPA iso20022 utilities</name>
 	<version>0.0.1</version>
 	<packaging>jar</packaging>
 	<inceptionYear>2012</inceptionYear>
