--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>nl.irp.sepa</groupId>
 	<artifactId>sepa-iso20022</artifactId>
 	<name>Dutch SEPA iso20022 utilities</name>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<inceptionYear>2012</inceptionYear>
 	<licenses>
