--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,16 @@
 		</license>
 	</licenses>
 
+	<prerequisites>
+		<maven>2.2.1</maven>
+	</prerequisites>
+
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>2.4</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
@@ -31,7 +35,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.2</version>
+				<version>2.4</version>
 				<configuration>
 					<archive>
 						<manifest>
@@ -44,7 +48,7 @@
 			<plugin>
 				<groupId>org.jvnet.jaxb2.maven2</groupId>
 				<artifactId>maven-jaxb2-plugin</artifactId>
-				<version>0.7.3</version>
+				<version>0.8.1</version>
 				<executions>
 					<execution>
 						<goals>
@@ -58,7 +62,17 @@
 						<include>pain.001.001.03.xsd</include>
 						<include>camt.053.001.02.xsd</include>
 					</schemaIncludes>
-					<!--<generatePackage>nl.irp.sepa.pain.model</generatePackage>-->
+					<!--<generatePackage>nl.irp.sepa.pain.model</generatePackage> -->
+					<args>
+						<arg>-Xfluent-api</arg>
+					</args>
+					<plugins>
+					<plugin>
+						<groupId>net.java.dev.jaxb2-commons</groupId>
+						<artifactId>jaxb-fluent-api</artifactId>
+						<version>2.1.8</version>
+					</plugin>
+				</plugins> 
 				</configuration>
 			</plugin>
 			<plugin>
