--- a/pom.xml
+++ b/pom.xml
@@ -91,12 +91,11 @@
 	</build>
 
 	<dependencies>
-		<!-- Apache commons-lang -->
-                <dependency>
-                    <groupId>org.apache.commons</groupId>
-                    <artifactId>commons-lang3</artifactId>
-                    <version>3.1</version>
-                </dependency>
+		<dependency>
+			<groupId>com.neovisionaries</groupId>
+			<artifactId>nv-i18n</artifactId>
+			<version>1.22</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
